Add Curiosity Stream & Nebula

--- a/Clash/Clash.yaml
+++ b/Clash/Clash.yaml
@@ -421,6 +421,8 @@ rules:
   - DOMAIN-SUFFIX,viu.com,GMedia
   - DOMAIN-SUFFIX,viu.tv,GMedia
   - DOMAIN-SUFFIX,viu.now.com,GMedia
+  - DOMAIN-SUFFIX,curiositystream.com,GMedia
+  - DOMAIN-SUFFIX,gvsm.zype.com,GMedia
 
   # Netflix
   - DOMAIN-SUFFIX,netflix.com,Netflix
