--- a/Quantumult/Quantumult.conf
+++ b/Quantumult/Quantumult.conf
@@ -8566,6 +8566,10 @@ HOST-SUFFIX,bbci.co.uk,DIRECT
 USER-AGENT,TwDramas*,DIRECT
 HOST-SUFFIX,chocotv.com.tw,DIRECT
 
+# > Curiosity Stream & Nebula
+HOST-SUFFIX,curiositystream.com,DIRECT
+HOST-SUFFIX,gvsm.zype.com,DIRECT
+
 # > Disney Plus
 USER-AGENT,Disney*,DIRECT
 HOST-SUFFIX,disneyplus.com,DIRECT
