--- a/Quantumult/Quantumult_media_only_lite.conf
+++ b/Quantumult/Quantumult_media_only_lite.conf
@@ -642,6 +642,10 @@ HOST-SUFFIX,bbci.co.uk,DIRECT
 USER-AGENT,TwDramas*,DIRECT
 HOST-SUFFIX,chocotv.com.tw,DIRECT
 
+# > Curiosity Stream & Nebula
+HOST-SUFFIX,curiositystream.com,DIRECT
+HOST-SUFFIX,gvsm.zype.com,DIRECT
+
 # > Now E
 USER-AGENT,PCCW*,DIRECT
 HOST-KEYWORD,nowe,DIRECT
