--- a/Quantumult/Quantumult_lite.conf
+++ b/Quantumult/Quantumult_lite.conf
@@ -640,6 +640,10 @@ HOST-SUFFIX,bbci.co.uk,DIRECT
 USER-AGENT,TwDramas*,DIRECT
 HOST-SUFFIX,chocotv.com.tw,DIRECT
 
+# > Curiosity Stream & Nebula
+HOST-SUFFIX,curiositystream.com,DIRECT
+HOST-SUFFIX,gvsm.zype.com,DIRECT
+
 # > Disney Plus
 USER-AGENT,Disney*,DIRECT
 HOST-SUFFIX,disneyplus.com,DIRECT
