--- a/Quantumult/Quantumult_lite.conf
+++ b/Quantumult/Quantumult_lite.conf
@@ -716,6 +716,9 @@ HOST-SUFFIX,tvb.com,DIRECT
 # > Pandora
 HOST-SUFFIX,pandora.com,DIRECT
 
+# > Peacock
+HOST-SUFFIX,peacocktv.com,DIRECT
+
 # > Sky GO
 USER-AGENT,skygo*,DIRECT
 HOST-SUFFIX,sky.com,DIRECT
