Add more domains for nebula service.

--- a/Clash/Clash.yaml
+++ b/Clash/Clash.yaml
@@ -422,7 +422,9 @@ rules:
   - DOMAIN-SUFFIX,viu.tv,GMedia
   - DOMAIN-SUFFIX,viu.now.com,GMedia
   - DOMAIN-SUFFIX,curiositystream.com,GMedia
-  - DOMAIN-SUFFIX,gvsm.zype.com,GMedia
+  - DOMAIN-SUFFIX,nebula.app,GMedia
+  - DOMAIN-SUFFIX,watchnebula.com,GMedia
+  - DOMAIN-SUFFIX,zype.com,GMedia
   - DOMAIN-SUFFIX,peacocktv.com,GMedia
 
   # Netflix
