--- a/Quantumult/Quantumult_lite.conf
+++ b/Quantumult/Quantumult_lite.conf
@@ -642,7 +642,9 @@ HOST-SUFFIX,chocotv.com.tw,DIRECT
 
 # > Curiosity Stream & Nebula
 HOST-SUFFIX,curiositystream.com,DIRECT
-HOST-SUFFIX,gvsm.zype.com,DIRECT
+HOST-SUFFIX,nebula.app,DIRECT
+HOST-SUFFIX,watchnebula.com,DIRECT
+HOST-SUFFIX,zype.com,DIRECT
 
 # > Disney Plus
 USER-AGENT,Disney*,DIRECT
