--- a/Quantumult/Quantumult_media_only_lite.conf
+++ b/Quantumult/Quantumult_media_only_lite.conf
@@ -644,7 +644,9 @@ HOST-SUFFIX,chocotv.com.tw,DIRECT
 
 # > Curiosity Stream & Nebula
 HOST-SUFFIX,curiositystream.com,DIRECT
-HOST-SUFFIX,gvsm.zype.com,DIRECT
+HOST-SUFFIX,nebula.app,DIRECT
+HOST-SUFFIX,watchnebula.com,DIRECT
+HOST-SUFFIX,zype.com,DIRECT
 
 # > Now E
 USER-AGENT,PCCW*,DIRECT
