--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.1.0 + 版本的配置文件
-# 2022年01月31日 22:00 UTC/GMT +8
+# 2022年01月31日 23:20 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -19,8 +19,6 @@ proxy-test-url = http://www.gstatic.com/generate_204
 test-timeout = 5
 # 解析器
 resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scripts/sub-store-parser.js
-
-[Host]
 
 [Proxy]
 # 内置 DIRECT、REJECT 策略
@@ -55,7 +53,7 @@ Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*(美国|United States|US|us
 国际媒体 = select,代理,直连,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
 #网易云音乐 = select,国内媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
 #网飞视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
-#迪士尼+ = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
+#迪士尼+ = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
 #声田音乐 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 #油管视频 = select, policy=国际媒体, tag=Netflix, enabled=true,代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 #电报服务 = select,代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
@@ -91,7 +89,13 @@ DOMAIN-KEYWORD,tracker,DIRECT
 DOMAIN-SUFFIX,smtp,DIRECT
 URL-REGEX,(Subject|HELO|SMTP),DIRECT
 
-IP-CIDR,1.1.1.1/24,DIRECT,no-resolve
+DOMAIN-SUFFIX,local,DIRECT
+IP-CIDR,10.0.0.0/8,DIRECT,no-resolve
+IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
+IP-CIDR,100.64.0.0/10,DIRECT,no-resolve
+IP-CIDR,127.0.0.0/8,DIRECT,no-resolve
+IP-CIDR,172.16.0.0/12,DIRECT,no-resolve
+IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
 
 GEOIP,CN,大陆网络
 FINAL,其他
@@ -101,7 +105,7 @@ FINAL,其他
 # 直连和广告拦截
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Special.list, policy=DIRECT, tag=Special, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Reject.list, policy=广告拦截, tag=Reject, enabled=true
-# 国内媒体分组，如需为某个规则列表单独设置策略，请直接修改最后的策略名称
+# 国内媒体分组，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称
 https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Netease%20Music.list, policy=国内媒体, tag=Netease Music, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list, policy=国内媒体, tag=Bilibili, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/IQ.list, policy=国内媒体, tag=IQ, enabled=true
@@ -149,7 +153,7 @@ https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/
 # 电报、微软及 TikTok / PayPal 可选规则列表
 #https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Telegram.list, policy=电报服务, tag=Telegram, enabled=true
 #https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Microsoft.list, policy=微软服务, tag=Microsoft, enabled=true
-#https://raw.githubusercontent.com/Semporia/Loon/master/Rule/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
+#https://raw.githubusercontent.com/Semporia/Loon/master/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
 #https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/PayPal.list, policy=贝宝服务, tag=PayPal, enabled=true
 # 必须规则列表
 https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
@@ -161,8 +165,19 @@ https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/
 enable = true
 
 [Remote Rewrite]
-# 订阅重写，格式：订阅url，别名(可选)
+# 订阅重写，格式：订阅 URL，tag=别名(可选)
 https://raw.githubusercontent.com/GeQ1an/Rules/master/Loon/Rewrite/Rewrite.list, tag=Rewrite, enabled=true
+
+[Host]
+# 可以指定以下四种模式：
+# 1. 指定域名使用对应的IP地址
+# 2. 将域名指向另一个域名
+# 3. 指定域名请求 DNS 时使用特定的 DNS 服务器，格式如下：
+# > google.com = server:8.8.8.8
+# > *.baidu.com = server:https://example.com/dns-query
+# > *.testflight.apple.com = server:8.8.4.4
+# 4. 指定具体的 SSID 环境下使用特定的 DNS 服务器，格式如下：
+# > ssid:Stick = server:system
 
 [Script]
 enable = true
